--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-roles_path    = /etc/ansible/roles:/usr/share/ansible/roles
+roles_path    = ./roles
 inventory     = ./hosts
 [privilege_escalation]
 [paramiko_connection]
